- fixed the nav on the mainpage - fixed responsiveness in product.html(the page was not resizing properly on mobile) - fixed pricing image style

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,10 +1,3 @@
-body {
-  font-size: 1em;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  width: 100%;
-  margin: auto;
-}
-
 .team {
   display: flex;
   flex-wrap: wrap;
@@ -60,11 +53,6 @@ body {
  * Mobile css
 */
 @media only screen and (max-width: 700px) {
-  body {
-    width: 90%;
-    margin: auto;
-  }
-
   .member {
     margin-top: 10px;
     margin: auto;
